--- a/templates/base.html
+++ b/templates/base.html
@@ -49,18 +49,21 @@
         https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js
     ">
     </script>
+
+    <!-- alertify js -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
+    <!-- Default  -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css"/>
+    <!-- Semantic UI theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/semantic.min.css"/>
+    <!-- Bootstrap theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/bootstrap.min.css"/>
   </head>
   <body class="h-screen bg-gray-100">
     {% block navbar %}
     {% include "navbar.html" %} 
     {% endblock navbar %}
-
-    {% for message in messages %}
-    <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-        <strong>{{ message }}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endfor %}
 
     {% block content %} 
 
@@ -72,5 +75,21 @@
       src="https://kit.fontawesome.com/b4edf9368f.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- alertify js -->
+    <!-- JavaScript -->
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+
+    <script>
+      {% for message in messages %}
+        {% if message.tags == "success" %}
+        alertify.set('notifier','position', 'bottom-right');
+        alertify.success('{{ message }}');
+        {% elif message.tags == "warning" %}
+        alertify.set('notifier', 'position', 'bottom-right');
+        alertify.warning("{{ message }}")
+        {% endif %}
+      {% endfor %}
+    </script>
   </body>
 </html>
