--- a/templates/login.html
+++ b/templates/login.html
@@ -35,13 +35,13 @@
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="bg-violet-500 hover:bg-violet-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit"
         >
           Login
         </button>
         <a
-          class="inline-block align-baseline font-bold text-sm text-rose-500 hover:text-blue-800"
+          class="inline-block align-baseline font-bold text-sm text-violet-500 hover:text-blue-800"
           href="#"
         >
           Forgot Password?
@@ -49,7 +49,7 @@
       </div>
       <div class="mt-4 text-sm text-center">
           <p>Doesn't have account?</p>
-          <a class="text-rose-500 font-medium" href="{% url "signup" %}">Sign up</a>
+          <a class="text-violet-500 font-medium" href="{% url "signup" %}">Sign up</a>
       </div>
     </form>
 </main>
