--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,16 +31,9 @@
               href="#"
               class=""
             >
-              <img class="w-16" src="{% static "images/logo.png" %}" alt="">
+              PulseDrive
             </a>
           </div>
-
-          <!-- primary nav -->
-          {% comment %} <div class="hidden md:flex items-center space-x-1">
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
-              ><i class="fa-solid fa-house"></i> Home</a
-            >
-          </div> {% endcomment %}
         </div>
 
         <!-- secondary nav -->
@@ -123,7 +116,7 @@
             </div>
           </div>
           {% else %}
-          <a class="py-2 px-4 text-white font-medium no-underline bg-rose-500 rounded-md" href="{% url "login" %}">Login | Sign Up</a>
+          <a class="py-2 px-4 text-white font-medium no-underline bg-violet-500 rounded-md" href="{% url "login" %}">Login | Sign Up</a>
           {% endif %}
         </div>
       </div>
