--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,8 +2,8 @@
 
 <header>
   <nav class="bg-white">
-    <div class="max-w-6xl mx-auto px-4">
-      <div class="flex justify-between">
+    <div class="max-w-6xl mx-auto px-4 py-3">
+      <div class="flex justify-between items-center">
         <!-- mobile button goes here -->
         <div class="md:hidden flex items-center">
           <button class="mobile-menu-button">
@@ -29,7 +29,7 @@
           <div>
             <a
               href="#"
-              class=""
+              class="text-violet-700 font-bold text-xl no-underline"
             >
               PulseDrive
             </a>
