created delete review feature and changed some color theme into violet

--- a/main_app/templates/main_app/car_review.html
+++ b/main_app/templates/main_app/car_review.html
@@ -45,7 +45,7 @@
       <li>
         <div class="flex justify-between items-center">
           <div class="flex items-center gap-3">
-            <p class="mb-0">{{ review.user.username }}</p>
+            <p class="mb-0 text-lg font-medium text-violet-600">{{ review.user.username }}</p>
           </div>
           <p>{{ review.created_at|date:"D d M Y" }}</p>
         </div>
