--- a/main_app/templates/main_app/create_transaction.html
+++ b/main_app/templates/main_app/create_transaction.html
@@ -76,7 +76,7 @@
     <div class="flex gap-3 mt-4">
         <a class="inline-block bg-gray-200 text-black font-bold py-2 px-4 rounded no-underline" href="{% url "home" %}">Cancel</a>
         <button
-          class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="bg-violet-500 hover:bg-violet-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit"
         >
           Rent Now
