changed some color into violet

--- a/main_app/templates/main_app/generate_bill.html
+++ b/main_app/templates/main_app/generate_bill.html
@@ -40,7 +40,7 @@
                 <p>Total: IDR {{ total_price|intcomma }}</p>
                 <p class="text-center">Thank you for you purchase!</p>
             </div>
-            <a class="inline-block bg-rose-500 hover:bg-rose-700 text-center no-underline text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" href="{% url "pdf_report" %}">Create</a>
+            <a class="inline-block bg-violet-500 hover:bg-violet-700 text-center no-underline text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" href="{% url "pdf_report" %}">Create</a>
         </div>
     </main>
 {% endblock content %}
