--- a/main_app/templates/main_app/transaction_detail.html
+++ b/main_app/templates/main_app/transaction_detail.html
@@ -37,7 +37,7 @@
                     <td class="p-2">IDR {{ transaction.rental_price|intcomma }}</td>
                     <td class="p-2">
                         <div class="flex gap-3">
-                            <a href="{% url "delete_transaction_new" transaction.id %}" onclick="return confirm('Are you sure you want to delete this transaction?');"><i class="fa-solid fa-trash fa-xl text-violet-500"></i></a>
+                            <a href="{% url "delete_transaction" transaction.id %}" onclick="return confirm('Are you sure you want to delete this transaction?');"><i class="fa-solid fa-trash fa-xl text-violet-500"></i></a>
                         </div>
                     </td>
                 </tr>
